--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -83,15 +83,7 @@ layout: default
         {% endif %}
 
         <div
-          class="
-            post-tail-bottom
-            d-flex
-            justify-content-between
-            align-items-center
-            mt-3
-            pt-5
-            pb-2
-          "
+          class="post-tail-bottom d-flex justify-content-between align-items-center mt-3 pt-5 pb-2"
         >
           <div class="license-wrapper">
             {% if site.data.locales[lang].copyright.license.template %} {%
@@ -133,7 +125,7 @@ layout: default
         repo="datalater/datalater.github.io"
         issue-term="pathname"
         label="comment"
-        theme="github-dark"
+        theme="github-light"
         crossorigin="anonymous"
         async
       ></script>
