google site verification 추가

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,6 +48,12 @@
 
   {% include favicons.html %}
 
+  <!-- Google Webmaster -->
+  <meta
+    name="google-site-verification"
+    content="_cSx2Sh_11gfNdeu98KrYEaCShSvXe-c885FSkEvwEA"
+  />
+
   <!-- Google Fonts -->
   <link
     rel="preconnect"
