랜덤 포스팅 로딩 메시지 추가
불필요한 inlclude를 삭제합니다.

--- a/_layouts/random.html
+++ b/_layouts/random.html
@@ -1,9 +1,7 @@
 ---
-layout: default
-# The posts' layout
+layout: page
+# The random post layout
 ---
-
-{% include lang.html %}
 
 <div>...loading</div>
 
