post content에 details에 대한 스타일 추가
상하 margin을 1rem으로 추가한다.

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -531,6 +531,11 @@ footer {
   dl > dd {
     margin-left: 1rem;
   }
+
+  details {
+    font-size: 0.98rem;
+    margin: 1rem 0 1rem;
+  }
 } // .post-content
 
 .tag:hover {
