이력서 스포트라이트 프로덕트 링크 추가

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -393,6 +393,8 @@ mode="{{ site.theme_mode }}" {% endif %} {% endcapture %}
       const opensources = [
         {
           title: "스포트라이트",
+          productUrl:
+            "https://chrome.google.com/webstore/detail/spotlight/lpccnbaohcggmnnciajjbkeinjkfdonp?hl=ko&authuser=0",
           githubUrl: "https://github.com/datalater/spotlight",
           role: "Owner & Maintainer",
           descriptions: [
