--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -5,10 +5,9 @@ layout: compress
 
 <!DOCTYPE html>
 
-{% include lang.html %} {% capture prefer_mode %} {% if site.theme_mode %}
-mode="{{ site.theme_mode }}" {% endif %} {% endcapture %}
+{% include lang.html %}
 
-<html lang="{{ site.lang }}" {{ prefer_mode }}>
+<html lang="{{ site.lang }}" mode="light">
   {% include head.html %}
   <link
     rel="stylesheet"
