--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -7,7 +7,7 @@
 %heading {
   color: var(--heading-color);
   font-weight: 400;
-  font-family: 'Lato', 'Microsoft Yahei', sans-serif;
+  font-family: "Lato", "Microsoft Yahei", sans-serif;
 }
 
 %tag-hover {
@@ -51,8 +51,9 @@
 }
 
 %anchor {
-  padding-top: 3.5rem;
-  margin-top: -2.5rem;
+  // padding-top: 3.5rem;
+  // margin-top: -2.5rem;
+  margin-top: 2.5rem;
 }
 
 %cursor-pointer {
