--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -295,7 +295,7 @@ layout: compress
                 "캐싱이나 서버 상태 동기화에 대한 간편한 API를 지원하는 React Query를 도입하여 비동기 데이터를 처리했습니다.",
                 "다양하고 많은 사용자를 타겟으로 하는 서비스 특성상 사용자의 웹 접근성을 고려한 색상을 사용했습니다.",
                 "끊김 없는 인터랙션을 위해 낙관적 업데이트틀 사용하여 UX를 개선했습니다. Lottie를 이용하여 애니메이션을 적용했습니다.",
-                "가능한 경우 TDD로 UI를 개발했습니다. 테스트 작성이 처음인 팀원을 위해 간단한 세미나를 열어 테스트 작성과 TDD에 대한 지식을 공유했습니다. 테스트 작성이 힘든 경우 대안으로 컴포넌트에 대한 스펙 문서를 작성하는 프로세스를 도입했습니다.",
+                "가능한 경우 TDD로 UI를 개발했습니다. 테스트 작성이 처음인 팀원을 위해 간단한 세미나를 열어 테스트 작성과 TDD에 대한 지식을 공유했습니다. 테스트 작성이 힘든 경우 대안으로 컴포넌트에 대한 스펙 문서를 먼저 작성하고 개발하는 프로세스를 도입했습니다.",
               ],
             },
             {
@@ -390,6 +390,19 @@ layout: compress
       $projects.appendChild(fragment(projects.map(experienceHTML).join("")));
 
       const opensources = [
+        {
+          title: "Finn: the Little Collector",
+          productUrl:
+            "https://js13kgames.com/entries/finn-the-little-collector",
+          githubUrl: "https://github.com/Shubidumdu/finn-the-little-collector",
+          role: "Collaborator & Maintainer",
+          descriptions: [
+            "자바스크립트를 사용하여 13KB 이하의 용량을 가진 게임을 만들어 제출하는 <a href='https://js13kgames.com/'>JS13KGames</a>에 참가한 프로젝트",
+            "캐릭터의 랜덤한 움직임 구현 및 클릭 영역에 대한 히트박스(hit box) 설정, 게임 결과 화면 개발",
+            "캐릭터가 움직일 때 실제 사람의 움직임처럼 느껴지도록 산에 올라가 사람들의 움직임을 관찰하여 얻은 아이디어 적용",
+          ],
+          skills: ["HTML Canvas", "CSS", "JavaScript", "Webpack"],
+        },
         {
           title: "스포트라이트",
           productUrl:
