이력서 요약에 프론트엔드에 초점이 가도록 업데이트

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -48,20 +48,23 @@ layout: compress
           </div>
           <div class="columns-2__right">
             <p class="summary__text mb-12">
-              2년 차 웹 개발자로 초기 스타트업에 합류하여 웹 서비스를 개발하고
-              운영한 경험이 있습니다. PHP, MySQL, AWS, Git 등의 기술을 사용해서
-              서버 사이드를 개발한 경험이 있으며 현재는 JavaScript와 React를
-              사용하여 클라이언트 사이드 개발에 주력하고 있습니다.
+              2년 차 웹 개발자로 JavaScript와 React를 사용하여 클라이언트 사이드
+              개발에 주력하고 있습니다. 초기 스타트업에 합류하여 백엔드
+              엔지니어로서 웹 서비스를 개발하고 운영한 경험이 있습니다. 제품을
+              만드는 구성원으로서 어떤 기능을 왜, 어떻게 만들어야 하는지 관심이
+              많습니다.
             </p>
             <p class="summary__text mb-12">
               사용자에게 눈에 보이는 가치를 전달하는 것을 좋아하기 때문에 CSS나
               Three.js 등 다양한 UI 기술을 활용해서 사이드 프로젝트 진행하는
               것을 즐깁니다. 문제를 해결할 때는 계획을 먼저 세우는 편입니다.
-              요구사항을 분석하고 할 일 목록을 만든 뒤 개발하는 것을 생활화하고
+              요구사항을 분석하고 스펙 문서를 만든 뒤 개발하는 것을 생활화하고
               있습니다. 이때 가능하면 테스트 코드를 먼저 작성하여 자동화된
-              테스트로 개발을 이끌어나가는 것을 좋아합니다. 지식을 글로
-              체계화하고 공유하는 것을 좋아하여 기술 블로그를 운영하면서 꾸준히
-              기술 포스트를 작성하고 있습니다.
+              테스트로 개발을 이끌어나가는 것을 좋아합니다. 테스트 코드도 어떻게
+              보면 문서화의 기능을 갖고 있는데, 글쓰기를 좋아합니다. 글을 쓰면서
+              지식을 정리하고 체계화하는 게 학습 패턴 중 하나고, 알게 된 지식을
+              사내 문서로 작성해서 지식을 자산화하는 것도 좋아합니다. 같은
+              맥락으로 개인적인 기술 블로그를 운영하고 있습니다.
             </p>
             <p class="summary__text mb-12">
               개발자의 코드는 궁극적으로 비즈니스 성장에 기여해야 한다고
